--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4==4.7.1
 certifi==2018.11.29
+cffi==1.12.3
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1.4
@@ -11,8 +12,11 @@ idna==2.8
 lxml==4.3.0
 Pillow==5.4.1
 psycopg2-binary==2.7.7
+pycparser==2.19
 pytz==2018.7
 requests==2.21.0
 soupsieve==1.6.2
+sqlparse==0.3.0
 urllib3==1.24.1
 whitenoise==4.1.2
+psycopg2==2.6.2
